--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div>
-        <h1>Hello World?</h1>
+        <h1>Hello World</h1>
         <!--webpack will simulate its existence, but will add styles and functionality to out page-->
         <script src="bundle.js"></script>
     </div>
