--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,19 @@
 </head>
 <body>
     <div>
-        <h1>Hello World</h1>
+        <h1>Users</h1>
+        <table>
+            <thead>
+                <th>&nbsp;</th>
+                <th>Id</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
+            </thead>
+            <tbody id="users">
+
+            </tbody>
+        </table>
         <!--webpack will simulate its existence, but will add styles and functionality to out page-->
         <script src="bundle.js"></script>
     </div>
